--- a/demo-preview.html
+++ b/demo-preview.html
@@ -1,4 +1,4 @@
-<body></body>
+<body style="background-image: url('https://cdn.pixabay.com/photo/2017/01/01/11/19/interior-1944348_1280.jpg')"></body>
 <script>
 //if (window.location.hostname === "preview.construct.net") {
 var C3AddonVersion_Obj = {
