--- a/demo-preview.html
+++ b/demo-preview.html
@@ -1,4 +1,4 @@
-<body style="background-image: url('https://cdn.pixabay.com/photo/2017/01/01/11/19/interior-1944348_1280.jpg');background-repeat: no-repeat; background-attachment: fixed; background-size: cover;"></body>
+<body style="background-image: url('https://editor.construct.net/media/og-image-promo.png');background-repeat: no-repeat; background-attachment: fixed; background-size: cover;"></body>
 <script>
 //if (window.location.hostname === "preview.construct.net") {
 var C3AddonVersion_Obj = {
