--- a/demo-preview.html
+++ b/demo-preview.html
@@ -1,4 +1,4 @@
-<body style="background-image: url('https://editor.construct.net/media/og-image-promo.png');background-repeat: no-repeat; background-attachment: fixed; background-size: cover;"></body>
+<body style="background-image: url('https://media.discordapp.net/attachments/710473860687855676/846020622344912966/c3.png');background-repeat: no-repeat; background-attachment: fixed; background-size: cover;"></body>
 <script>
 //if (window.location.hostname === "preview.construct.net") {
 var C3AddonVersion_Obj = {
